<resources>
    <string name="app_name">Projekt_Kalkulator</string>
    <string name="signChangeBut">+/-</string>
    <string name="oneButton">1</string>
    <string name="threeButton">3</string>
    <string name="eightButton">8</string>
    <string name="dropButton">DROP</string>
    <string name="mMinusButton">M-</string>
    <string name="mPlusButton">M+</string>
    <string name="optButton">OPT</string>
    <string name="stackText">STACK:</string>
    <string name="nrThreeText">3.</string>
    <string name="msButton">MS</string>
    <string name="mrButton">MR</string>
    <string name="nrTwoText">2.</string>
    <string name="div1xButton">1/x</string>
    <string name="nrOneText">1.</string>
    <string name="acButton">AC</string>
    <string name="stackSizeText">0</string>
    <string name="nrFourButton">4.</string>
    <string name="lnButton">ln</string>
    <string name="dotButton">.</string>
    <string name="enterButton">ENTER</string>
    <string name="minusButton">-</string>
    <string name="multiplyButton">X</string>
    <string name="plusButton">+</string>
    <string name="sqrtButton">√</string>
    <string name="twoButton">2</string>
    <string name="percentButton">%</string>
    <string name="swapButton">SWAP</string>
    <string name="sevenButton">7</string>
    <string name="divideButton">/</string>
    <string name="powerX2Button">x²</string>
    <string name="fiveButton">5</string>
    <string name="undoButton">⇐</string>
    <string name="powerYXButton">y^x</string>
    <string name="sixButton">6</string>
    <string name="zeroButton">0</string>
    <string name="nineButton">9</string>
    <string name="fourButton">4</string>
    <string name="logButton">log</string>
    <string name="change_screen_color">Change Screen Color</string>
    <string name="redColorTextScreen">Red:</string>
    <string name="backToCalc">Back</string>
    <string name="numberOfDecPlacText">Maximal number of decimal places</string>
    <string name="increaseDecPlacesButton">+</string>
    <string name="decreaseDecPlacesButton">-</string>
    <string name="decPlaces">10</string>
    <string name="greenColorTextScreen">Green:</string>
    <string name="blueColorTextScreen">Blue:</string>
    <string name="showScreenColorText">Screen Color:</string>
    <string name="optionsText">OPTIONS</string>
</resources>